--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,15 @@ aside div {
   border: 1px solid #c3c3c3;
   margin-bottom: 1em;
   padding: 1em;
+  position: relative;
+}
+
+aside div i.fas.fa-tag {
+  font-size: 5rem;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  opacity: 0.2;
 }
 
 @media screen and (min-width: 1200px) {
@@ -380,7 +389,7 @@ aside div p:last-child {
 }
 
 .side-button a:hover {
-  right: 4px;
+  right: 0px;
 }
 
 .side-button a:first-of-type {
@@ -393,7 +402,7 @@ aside div p:last-child {
 
 .side-button a:last-of-type {
   bottom: 16px;
-  color: crimson;
+  color: orangered;
 }
 .side-button:last-of-type a {
 }
