--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ section h2 {
   text-align: center;
   color: #333;
   font-size: 1.4rem;
-  /* margin-bottom: 1.7rem; */
   font-weight: bold;
   background-color: #a3a3a3;
   padding: 0px 1em;
@@ -135,14 +134,12 @@ h1 > span {
   height: 1.5em;
   position: relative;
   z-index: 0;
-
   display: inline-block;
 }
 
 h1 > span::before {
   position: absolute;
   content: "";
-
   background-image: url(../img/underline.svg);
   background-repeat: no-repeat;
   background-position: bottom;
@@ -152,7 +149,7 @@ h1 > span::before {
   right: 0;
   bottom: 0;
   left: 0;
-  opacity: 0.6;
+  opacity: 0.5;
 }
 
 p,
@@ -375,16 +372,16 @@ aside div p:last-child {
 /* SIDE BUTTON  */
 
 .side-button a {
-  color: #3f6bca;
-  font-size: 1.6em;
   position: fixed;
   right: -18px;
-  display: block;
+  color: rgba(0, 0, 255, 0.6);
+  font-size: 1.6em;
   line-height: 0;
   padding: 1rem;
   border: 2px solid white;
-  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(5px);
   transition: right 0.5s;
 }
 
@@ -402,9 +399,7 @@ aside div p:last-child {
 
 .side-button a:last-of-type {
   bottom: 16px;
-  color: orangered;
-}
-.side-button:last-of-type a {
+  color: rgba(255, 68, 0, 0.6);
 }
 
 @media (min-width: 700px) {
